--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -940,8 +940,8 @@ body {
   }
 
   .socials img {
-      margin-left: 10px;
-      width: 40px;
+      margin-right: 5px;
+      width: 35px;
   }
 }
 .btn-acc {
